# lambda-synthesis-experiments

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CI_CD_ARCHITECTURE.md  CI_COMPARISON.md  EXPERIMENTAL_CONFIG.yml  MODERNIZATION_REPORT.md  Makefile  PROJECT_COMPLETION.md  README.md  RESEARCH_ANALYSIS.md  USS_REPORT.md  pyproject.toml  requirements.md  requirements_experiments.txt
.github/workflows/: ci.yml
src/data/: generator.py
src/data/shards/: uss_shard_0000.parquet  uss_shard_0001.parquet  uss_shard_0002.parquet  uss_shard_0003.parquet  uss_shard_0004.parquet  uss_shard_0005.parquet  uss_shard_0006.parquet  uss_shard_0007.parquet  uss_shard_0008.parquet  uss_shard_0009.parquet  uss_shard_0010.parquet  uss_shard_0011.parquet  uss_shard_0012.parquet  uss_shard_0013.parquet  uss_shard_0014.parquet  uss_shard_0015.parquet  uss_shard_0016.parquet  uss_shard_0017.parquet  uss_shard_0018.parquet  uss_shard_0019.parquet  uss_shard_0020.parquet  uss_shard_0021.parquet  uss_shard_0022.parquet  uss_shard_0023.parquet  uss_shard_0024.parquet  uss_shard_0025.parquet  uss_shard_0026.parquet  uss_shard_0027.parquet  uss_shard_0028.parquet  uss_shard_0029.parquet  uss_shard_0030.parquet  uss_shard_0031.parquet  uss_shard_0032.parquet  uss_shard_0033.parquet  uss_shard_0034.parquet  uss_shard_0035.parquet  uss_shard_0036.parquet  uss_shard_0037.parquet  uss_shard_0038.parquet  uss_shard_0039.parquet
src/experiments/: uss_pipeline.py
src/formal/: verification.py
src/kernels/: tensor_contraction.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_generator.py  test_tensor_contraction.py  test_uss_pipeline.py
